--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,7 +8,7 @@
     <title>Norgren Designs</title>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -16,7 +16,7 @@
 
   <header ng-include="'views/header.html'" id="globalHeader"></header>
 
-  <div ng-view></div>
+  <div id="contentSection" ng-view></div>
 
   <footer ng-include="'views/footer.html'"></footer>
 
