--- a/public/views/services.html
+++ b/public/views/services.html
@@ -5,7 +5,7 @@
          <div class="row" ng-repeat="service in services">
            <h3>{{service.title}}</h3>
            <ul>
-             <li ng-repeat="item in service.items">{{service.items}}</li>
+             <li ng-repeat="item in service.items">{{item}}</li>
            </ul>
          </div>
        </article>
