--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,4 +1,4 @@
-<section id='homePageContent' class="show">
+<section id="homePageContent">
   <div ng-repeat="section in sections">
     <h3>{{section.heading}}</h3>
     <p>{{section.content}}</p>
