--- a/public/css/background.scss
+++ b/public/css/background.scss
@@ -2,13 +2,11 @@
 div.background-array {
 	width: 100%;
 	max-width: 1440px;
+	position: relative;
+	top: -4px;
 	background-color: #333;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-flow: row wrap;
-	flex-flow: row wrap;
-	-webkit-align-items: center;
-	align-items: center;
+	@include flex-row;
+	@include align-center;
 }
 
 div.background-array figure {
@@ -22,99 +20,76 @@ div.background-array figure {
 	align-self: flex-start;
 	background-size: cover;
 	background-position: center;
-}
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 1),
-only screen and (min--moz-device-pixel-ratio: 1),
-only screen and (min-device-pixel-ratio: 1),
-only screen and (min-resolution: 96dpi),
-only screen and (min-resolution: 1dppx) {
-	div.background-array figure.bolt {
-		background-image: url("../img/array_bolt.jpg");
+	&.bolt {
+		@include screens {
+			background-image: url("../img/array_bolt.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_bolt_2x.jpg");
+		}
 	}
-
-	div.background-array figure.cable {
-		background-image: url("../img/array_cable.jpg");
+	&.cable {
+		@include screens {
+			background-image: url("../img/array_cable.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_cable_2x.jpg");
+		}
 	}
-
-	div.background-array figure.card {
-		background-image: url("../img/array_card.jpg");
+	&.card {
+		@include screens {
+			background-image: url("../img/array_card.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_card_2x.jpg");
+		}
 	}
-
-	div.background-array figure.circuitboard {
-		background-image: url("../img/array_circuitboard.jpg");
+	&.circuitboard {
+		@include screens {
+			background-image: url("../img/array_circuitboard.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_circuitboard_2x.jpg");
+		}
 	}
-
-	div.background-array figure.coffee {
-		background-image: url("../img/array_coffee.jpg");
+	&.coffee {
+		@include screens {
+			background-image: url("../img/array_coffee.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_coffee_2x.jpg");
+		}
 	}
-
-	div.background-array figure.cylinder {
-		background-image: url("../img/array_cylinder.jpg");
+	&.cylinder {
+		@include screens {
+			background-image: url("../img/array_cylinder.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_cylinder_2x.jpg");
+		}
 	}
-
-	div.background-array figure.hardware {
-		background-image: url("../img/array_hardware.jpg");
+	&.hardware {
+		@include screens {
+			background-image: url("../img/array_hardware.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_hardware_2x.jpg");
+		}
 	}
-
-	div.background-array figure.input {
-		background-image: url("../img/array_input.jpg");
+	&.input {
+		@include screens {
+			background-image: url("../img/array_input.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_input_2x.jpg");
+		}
 	}
-
-	div.background-array figure.prototypes {
-		background-image: url("../img/array_prototypes.jpg");
+	&.prototypes {
+		@include screens {
+			background-image: url("../img/array_prototypes.jpg");
+		}
+		@include retina {
+			background-image: url("../img/array_prototypes_2x.jpg");
+		}
 	}
-}
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2),
-only screen and (min-resolution: 192dpi),
-only screen and (min-resolution: 2dppx) {
-	div.background-array figure.bolt {
-		background-image: url("../img/array_bolt_2x.jpg");
-	}
-
-	div.background-array figure.cable {
-		background-image: url("../img/array_cable_2x.jpg");
-	}
-
-	div.background-array figure.card {
-		background-image: url("../img/array_card_2x.jpg");
-	}
-
-	div.background-array figure.circuitboard {
-		background-image: url("../img/array_circuitboard_2x.jpg");
-	}
-
-	div.background-array figure.coffee {
-		background-image: url("../img/array_coffee_2x.jpg");
-	}
-
-	div.background-array figure.cylinder {
-		background-image: url("../img/array_cylinder_2x.jpg");
-	}
-	div.background-array figure.hardware {
-		background-image: url("../img/array_hardware_2x.jpg");
-	}
-
-	div.background-array figure.input {
-		background-image: url("../img/array_input_2x.jpg");
-	}
-
-	div.background-array figure.prototypes {
-		background-image: url("../img/array_prototypes_2x.jpg");
-	}
-}
-
-/* ------------------  Footer Elements -------------------------------  */
-
-footer p.copy-footer {
-	text-transform: uppercase;
-	text-align: center;
-	padding: 1em;
-	font-weight: 300;
-	color: $white;
 }
