--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -20,6 +20,42 @@ $content-min: 450px;
 $header-size: 4em;
 $min-height: 1050px;
 
+// mixins
+@mixin flex-row {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
+}
+
+@mixin align-center {
+	-webkit-align-items: center;
+	align-items: center;
+}
+
+@mixin retina {
+	@media
+	only screen and (-webkit-min-device-pixel-ratio: 2),
+	only screen and (min--moz-device-pixel-ratio: 2),
+	only screen and (min-device-pixel-ratio: 2),
+	only screen and (min-resolution: 192dpi),
+	only screen and (min-resolution: 2dppx) {
+		@content;
+	}
+}
+
+@mixin screens {
+	@media
+	only screen and (-webkit-min-device-pixel-ratio: 1),
+	only screen and (min--moz-device-pixel-ratio: 1),
+	only screen and (min-device-pixel-ratio: 1),
+	only screen and (min-resolution: 96dpi),
+	only screen and (min-resolution: 1dppx) {
+		@content;
+	}
+}
+
+
 // import scss modules
 @import "global";
 @import "header";
