--- a/public/views/header.html
+++ b/public/views/header.html
@@ -7,7 +7,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href='/main' class='active'>Home</a></li>
+        <li><a href='/main'>Home</a></li>
         <li><a href='/about'>About</a></li>
         <li><a href='/services'>Services</a></li>
         <li><a href='/contact'>Contact</a></li>
