--- a/public/views/admin/about.html
+++ b/public/views/admin/about.html
@@ -1,3 +1,22 @@
+<form class="form" novalidate>
+  <div class="form-group">
+    <label for="name">Employee's Name</label>
+    <input type="text" class="form-control" ng-model="name">
+  </div>
+  <div class="form-group">
+    <label for="title">Employee's Title</label>
+    <input type="text" class="form-control" ng-model="title">
+  </div>
+  <div class="form-group">
+    <label for="name">Employee's First Name</label>
+    <input type="text" class="form-control" ng-model="class">
+  </div>
+  <div class="form-group">
+    <label for="name">Employee's Bio</label>
+    <input type="text" class="form-control" ng-model="bio">
+  </div>
+  <button class="btn btn-primary" ng-click="addEmployee()">Add Employee</button>
+</form>
 <div class="row well" ng-repeat="employee in employees">
   <div class="profileBox">
     <figure class="portrait" ng-class="employee.class"></figure>
