--- a/public/views/admin/main.html
+++ b/public/views/admin/main.html
@@ -1,17 +1,31 @@
 <div class="row well" ng-repeat="section in sections">
   <h3>{{section.heading}}</h3>
   <p>{{section.content}}</p>
-  <button class="btn btn-danger" ng-click="update()">Edit</button>
-  <form ng-submit="updateSection()">
+  <button class="btn btn-success" ng-click="editContent()">Edit Content</button>
+  <form class="form" ng-show="showForm">
     <div class="form-group">
       <label>Headline</label>
-      <input type="text" class="form-control" ng-model="sections.heading"/>
+      <input type="text" class="form-control" ng-model="section.heading"/>
     </div>
     <div class="form-group">
       <label>Content</label>
-      <input type="text" class="form-control" ng-model="sections.content"/>
+      <input type="text" class="form-control" ng-model="section.content"/>
     </div>
-    <button type="submit" class="btn btn-success">Update</button>
+    <button class="btn btn-success" ng-click="updateSection(section)">Update</button>
+    <button class="btn btn-success" ng-click="deleteSection(section)">Delete</button>
   </form>
 </div>
-<button class="btn btn-default">Add new section</button>
+<button class="btn btn-default" ng-click="toggleNewSection()">Add new section</button>
+<div ng-show="addSection">
+  <form class="form">
+    <div class="form-group">
+      <label>Headline</label>
+      <input type="text" class="form-control" ng-model="newHeading"/>
+    </div>
+    <div class="form-group">
+      <label>Content</label>
+      <input type="text" class="form-control" ng-model="newContent"/>
+    </div>
+    <button class="btn btn-success" ng-click="addContent()">Update</button>
+  </form>
+</div>
