Working on the add services function. Will wrap up tomorrow.

--- a/public/views/admin/services.html
+++ b/public/views/admin/services.html
@@ -4,3 +4,27 @@
     <li ng-repeat="item in service.items">{{item}}</li>
   </ul>
 </div>
+<button class="btn btn-success" ng-click="toggleForm()">Add Service</button>
+<div class="serviceForm" ng-show="showForm">
+  <form class="form" novalidate>
+    <div class="form-group" ng-show="!serviceTitle">
+      <label>Service Headline</label>
+      <input type="text" class="form-control" ng-model="title" required/>
+    </div>
+    <p ng-show="serviceTitle">{{title}}</p>
+    <button class="btn btn-primary" ng-click="addService()">Add Services</button>
+    <div ng-show="showItemForm">
+      <div class="form-group">
+        <label>Service</label>
+        <input type="text" class="form-control" ng-model="newItem" required/>
+      </div>
+      <button class="btn btn-primary" ng-click="addItem()">Add Item</button>
+      <div class="service-items form-group">
+        <ul>
+          <li ng-repeat="detail in serviceItems">{{detail}}</li>
+        </ul>
+      </div>
+      <button class="btn btn-primary" ng-click="addServiceItems(serviceItems)">Submit</button>
+    </div>
+  </form>
+</div>
