Some identifying of the challenges of the addServiceItems method based on the structure of the markup.

--- a/public/views/admin/services.html
+++ b/public/views/admin/services.html
@@ -1,10 +1,10 @@
 <div class="row well" ng-repeat="service in services">
   <h3>{{service.title}}</h3>
   <ul>
-    <li ng-repeat="item in service.items">{{item}}</li>
+    <li ng-repeat="item in service.items track by $index">{{item}}</li>
   </ul>
 </div>
-<button class="btn btn-success" ng-click="toggleForm()">Add Service</button>
+<button class="btn btn-success" ng-click="toggleForm()">New Service</button>
 <div class="serviceForm" ng-show="showForm">
   <form class="form" novalidate>
     <div class="form-group" ng-show="!serviceTitle">
@@ -13,7 +13,7 @@
     </div>
     <p ng-show="serviceTitle">{{title}}</p>
     <button class="btn btn-primary" ng-click="addService()">Add Services</button>
-    <div ng-show="showItemForm">
+    <div>
       <div class="form-group">
         <label>Service</label>
         <input type="text" class="form-control" ng-model="newItem" required/>
@@ -24,7 +24,7 @@
           <li ng-repeat="detail in serviceItems">{{detail}}</li>
         </ul>
       </div>
-      <button class="btn btn-primary" ng-click="addServiceItems(serviceItems)">Submit</button>
+      <button class="btn btn-primary" ng-click="addServiceItems()">Submit</button>
     </div>
   </form>
 </div>
