--- a/public/views/admin/services.html
+++ b/public/views/admin/services.html
@@ -1,12 +1,3 @@
-<div class="row well" ng-repeat="service in services">
-  <h3>{{service.title}}</h3>
-  <ul>
-    <li ng-repeat="item in service.items track by $index">{{item}}</li>
-  </ul>
-  <button class="btn btn-default">Edit Service</button>
-  <button class="btn btn-primary">Remove Service</button>
-</div>
-<button class="btn btn-success" ng-click="toggleForm()" ng-hide="showItemForm">New Service</button>
 <div class="serviceForm" ng-show="showForm">
   <form class="form" novalidate>
     <div class="form-group" ng-show="!serviceTitle">
@@ -28,4 +19,13 @@
       <button class="btn btn-primary" ng-click="addServiceItems()">Submit</button>
     </div>
   </form>
+</div>
+<button class="btn btn-success" ng-click="toggleForm()" ng-hide="showItemForm">New Service</button>
+<div class="row well" ng-repeat="service in services | orderBy:'-' track by $index">
+  <h3>{{service.title}}</h3>
+  <ul>
+    <li ng-repeat="item in service.items track by $index">{{item}}</li>
+  </ul>
+  <button class="btn btn-default">Edit Service</button>
+  <button class="btn btn-primary" ng-click="deleteService(service._id)">Remove Service</button>
 </div>
