Form now sending information. Need to require creds for access to any of the further links in the navigation.

--- a/public/views/admin/admin.html
+++ b/public/views/admin/admin.html
@@ -17,7 +17,7 @@
   <div class="panel panel-header">
     <nav class="navbar navbar-inverse">
       <ul class="nav navbar-nav">
-        <li><a href="/admin">Admin Home/Messages</a></li>
+        <li><a href="/admin/messages">Admin Home/Messages</a></li>
         <li><a href="/admin/main">Home Page</a></li>
         <li><a href="/admin/services">Services Page</a></li>
         <li><a href="/admin/about">Employees Page</a></li>
