--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,9 +1,15 @@
-<section class="login">
-  <form>
-    <label>Email</label>
-    <input type="text">
-    <label>Password</label>
-    <input type="password">
-    <button>Submit</button>
+<section class="login well">
+  <form class="form">
+    <div class="form-group">
+      <label class="label">Email</label>
+      <input class="form-control" type="email" ng-model="email" required>
+    </div>
+    <div class="form-group">
+      <label class="label">Password</label>
+      <input class="form-control" type="password" ng-model="password" required>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-default" ng-click="sendCreds()">Submit</button>
+    </div>
   </form>
 </section>
