Adding logout function, resolved messages model issue.

--- a/public/views/admin/admin.html
+++ b/public/views/admin/admin.html
@@ -24,6 +24,7 @@
         <li><a href="/admin/main">Home Page</a></li>
         <li><a href="/admin/services">Services Page</a></li>
         <li><a href="/admin/about">Employees Page</a></li>
+        <li><a href="/logout">Log Out</a></li>
       </ul>
     </nav>
   </div>
