--- a/public/views/admin/admin.html
+++ b/public/views/admin/admin.html
@@ -18,13 +18,14 @@
     <nav class="navbar navbar-inverse">
       <ul class="nav navbar-nav" ng-hide="loggedIn">
         <li><a href="/admin/login">Log In</a></li>
+        <li><a href="/">Main Site</a></li>
       </ul>
       <ul class="nav navbar-nav" ng-show="loggedIn">
         <li><a href="/admin/messages">Admin Home/Messages</a></li>
         <li><a href="/admin/main">Home Page</a></li>
         <li><a href="/admin/services">Services Page</a></li>
         <li><a href="/admin/about">Employees Page</a></li>
-        <li><a href="/logout">Log Out</a></li>
+        <li><a href="/admin/login" ng-click="logout()">Log Out</a></li>
       </ul>
     </nav>
   </div>
