Updated app to use image upload via filestack. Working as expected.

--- a/public/views/admin/about.html
+++ b/public/views/admin/about.html
@@ -16,6 +16,10 @@
     <label for="name">Employee's Bio</label>
     <input type="text" class="form-control" ng-model="bio">
   </div>
+  <div class="form-group">
+    <label for="image">Upload Image</label>
+    <button class="btn btn-success" ng-click="upload()">Find Image</button>
+  </div>
   <button class="btn btn-primary" ng-click="addEmployee()">Submit</button>
 </form>
 
