--- a/public/views/admin/admin.html
+++ b/public/views/admin/admin.html
@@ -36,6 +36,8 @@
   <script src="libs/angular/angular.min.js"></script>
   <script src="libs/angular-route/angular-route.min.js"></script>
   <script src="libs/angular-ui/build/angular-ui.min.js"></script>
+  <script src="libs/filepicker-js/filepicker.js"></script>
+  <script src="libs/angular-filepicker/dist/angular_filepicker.js"></script>
 
   <!-- app scripts -->
   <!-- controllers -->
