Created signup link to create authentication serialized user accounts for admin users.

--- a/public/views/admin/admin.html
+++ b/public/views/admin/admin.html
@@ -18,6 +18,7 @@
     <nav class="navbar navbar-inverse">
       <ul class="nav navbar-nav" ng-hide="loggedIn">
         <li><a href="/admin/login">Log In</a></li>
+        <li><a href="/admin/signup">Sign Up</a></li>
         <li><a href="/">Main Site</a></li>
       </ul>
       <ul class="nav navbar-nav" ng-show="loggedIn">
@@ -47,6 +48,7 @@
   <script src="js/admin/controllers/AdminMsgCtrl.js"></script>
   <script src="js/admin/controllers/AdminServiceCtrl.js"></script>
   <script src="js/admin/controllers/loginCtrl.js"></script>
+  <script src="js/admin/controllers/adminSignupCtrl.js"></script>
   <!-- services/factories -->
   <script src="js/admin/services/AdminService.js"></script>
   <script src="js/services/adminServices.js"></script>
