--- a/public/views/admin/signup.html
+++ b/public/views/admin/signup.html
@@ -1,5 +1,5 @@
 <section class="login well">
-  <form class="form" action="/api/admin/login" method="post">
+  <form class="form" action="/api/admin/signup" method="post">
     <div class="form-group">
       <label class="label">Email</label>
       <input class="form-control" type="email" name="email" required>
